--- a/web/index.html
+++ b/web/index.html
@@ -3,78 +3,99 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Postura – Web UI</title>
+    <title>Postura • Welcome</title>
     <style>
-      body { font-family: system-ui, -apple-system, Segoe UI, Roboto, sans-serif; margin: 24px; }
-      .card { max-width: 900px; padding: 16px; border: 1px solid #ddd; border-radius: 10px; }
-      .row { margin: 10px 0; }
-      button { padding: 8px 16px; }
-      pre { background: #fafafa; padding: 12px; border-radius: 8px; overflow: auto; }
-      .muted { color: #666; }
-      .grid { display: grid; grid-template-columns: 1fr 1fr; gap: 16px; }
+      :root {
+        --muted: #9CA3AF;
+        --accent: #A855F7;
+        --accent-2: #C1A6FF;
+        --light: #E5E7EB;
+        --bg: #0B0F14;
+      }
+      * { box-sizing: border-box; }
+      html, body { height: 100%; }
+      body {
+        margin: 0;
+        font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial;
+        color: var(--light);
+        background: var(--bg);
+        overflow-x: hidden;
+      }
+      .gradient {
+        position: fixed; inset: -20% -10% -10% -10%; z-index: 0; pointer-events: none;
+        background: radial-gradient(900px 420px at 10% -10%, rgba(168,85,247,0.25), transparent 60%),
+                    radial-gradient(800px 520px at 110% 10%, rgba(193,166,255,0.25), transparent 65%),
+                    radial-gradient(700px 380px at 50% 120%, rgba(229,231,235,0.08), transparent 70%);
+        animation: drift 24s ease-in-out infinite alternate;
+        filter: saturate(110%);
+      }
+      @keyframes drift { 0%{ transform: translate3d(0,0,0) scale(1); } 100%{ transform: translate3d(-2%,1%,0) scale(1.03);} }
+      .hero { position: relative; min-height: 100vh; display: grid; place-items: center; padding: 60px 24px; }
+      .layer { position: absolute; inset: 0; overflow: hidden; pointer-events: none; }
+      .blob { position: absolute; filter: blur(60px); opacity: .35; mix-blend-mode: screen; animation: float 18s ease-in-out infinite; }
+      .b1 { width: 520px; height: 520px; background: #A855F7; top: -140px; left: -120px; }
+      .b2 { width: 640px; height: 640px; background: #C1A6FF; top: -120px; right: -120px; animation-delay: 2.2s; }
+      .b3 { width: 460px; height: 460px; background: #A855F7; bottom: -160px; left: 20%; animation-delay: 1.1s; opacity: .28; }
+      @keyframes float { 0%,100%{ transform: translateY(0) translateX(0);} 50%{ transform: translateY(22px) translateX(12px);} }
+      .content { position: relative; z-index: 1; text-align: center; max-width: 920px; }
+      .logo { width: 64px; height: 64px; margin: 0 auto 14px; border-radius: 16px; background: linear-gradient(135deg, var(--accent), var(--accent-2)); box-shadow: 0 12px 30px rgba(168,85,247,.35); transform: translateZ(0); }
+      .title { font-size: clamp(32px, 6vw, 56px); margin: 0 0 8px; letter-spacing: .4px; line-height: 1.05; background: linear-gradient(90deg, #fff, #E5E7EB, #C1A6FF, #A855F7, #E5E7EB); -webkit-background-clip: text; background-clip: text; color: transparent; background-size: 200% auto; animation: shine 9s linear infinite; text-shadow: 0 2px 0 rgba(0,0,0,.25); }
+      @keyframes shine { 0%{ background-position: 0% 50%; } 100%{ background-position: 200% 50%; } }
+      .subtitle { color: var(--muted); font-size: clamp(14px, 2.2vw, 18px); margin: 10px auto 20px; max-width: 760px; }
+      .cta { display: inline-flex; align-items: center; gap: 10px; padding: 14px 22px; border-radius: 14px; color: #0B0F14; font-weight: 800; text-decoration: none; background: linear-gradient(135deg, var(--accent), var(--accent-2)); box-shadow: 0 12px 30px rgba(168,85,247,.35), 0 6px 16px rgba(193,166,255,.18); transform: perspective(600px) translateZ(0); transition: transform .2s ease, box-shadow .2s ease; }
+      .cta:hover { transform: perspective(600px) translateZ(6px) rotateX(2deg) rotateY(-2deg); box-shadow: 0 16px 40px rgba(168,85,247,.45), 0 10px 24px rgba(193,166,255,.24); }
+      .cta .dot { width: 8px; height: 8px; border-radius: 999px; background: #0B0F14; animation: pulse 1.2s ease-in-out infinite; opacity: .9; }
+      @keyframes pulse { 0%,100%{ transform: scale(1); opacity: .9;} 50%{ transform: scale(1.4); opacity: 1; } }
+      canvas.fx { position: absolute; inset: 0; z-index: 0; pointer-events: none; opacity: .45; }
+      .footer { position: absolute; bottom: 18px; left: 0; right: 0; text-align: center; color: var(--muted); font-size: 12px; z-index: 1; }
     </style>
   </head>
   <body>
-    <div class="card">
-      <h2>Postura – Analyze</h2>
-      <div class="row">
-        <input id="file" type="file" accept="video/mp4" />
-        <button id="btn">Analyze</button>
-        <label style="margin-left:12px"><input id="fast" type="checkbox" /> Fast mode</label>
-        <span class="muted" style="margin-left:12px">Max 50MB MP4</span>
+    <div class="gradient"></div>
+    <section class="hero">
+      <div class="layer">
+        <div class="blob b1"></div>
+        <div class="blob b2"></div>
+        <div class="blob b3"></div>
+        <canvas class="fx" id="fx"></canvas>
       </div>
-      <div class="row" id="reportLink"></div>
-      <div class="grid">
-        <div>
-          <h3>Response</h3>
-          <pre id="out"></pre>
-        </div>
-        <div>
-          <h3>Saved Summary</h3>
-          <pre id="saved"></pre>
-        </div>
+      <div class="content">
+        <div class="logo"></div>
+        <h1 class="title">Postura</h1>
+        <p class="subtitle">Move better. Measure better. Turn your workout videos into actionable insights with MediaPipe‑powered form analysis.</p>
+        <a class="cta" href="/ui/app.html"><span class="dot"></span> Open Analyzer</a>
       </div>
-    </div>
-
+      <div class="footer">© <script>document.write(new Date().getFullYear())</script> Ahmed Ali</div>
+    </section>
     <script>
-      async function analyze() {
-        const input = document.getElementById('file');
-        const out = document.getElementById('out');
-        const saved = document.getElementById('saved');
-        const link = document.getElementById('reportLink');
-        if (!input.files.length) { alert('Select an MP4 file'); return; }
-        const file = input.files[0];
-        const form = new FormData();
-        form.append('file', file, file.name);
-        out.textContent = 'Uploading and analyzing...';
-        saved.textContent = '';
-        link.textContent = '';
-        try {
-          const fast = document.getElementById('fast').checked ? '?fast=1' : '';
-          const resp = await fetch(`/analyze${fast}`, { method: 'POST', body: form });
-          const text = await resp.text();
-          let data;
-          try { data = JSON.parse(text); } catch (e) { out.textContent = text; return; }
-          out.textContent = JSON.stringify(data, null, 2);
-          if (!resp.ok) return;
-          if (data && data.video_id) {
-            const href = `/reports/${data.video_id}/summary.json`;
-            link.innerHTML = `<a href="${href}" target="_blank">Open saved summary.json</a>`;
-            try {
-              const s = await fetch(href);
-              if (s.ok) {
-                const js = await s.json();
-                saved.textContent = JSON.stringify(js, null, 2);
-              }
-            } catch {}
-          }
-        } catch (err) {
-          out.textContent = String(err);
+      (function(){
+        const c = document.getElementById('fx'); if(!c) return; const d = c.getContext('2d');
+        function resize(){ c.width = window.innerWidth; c.height = Math.max(window.innerHeight, 600); }
+        resize(); window.addEventListener('resize', resize);
+        const N = 90; const parts = []; const colors = ['#A855F7','#C1A6FF','#E5E7EB'];
+        for(let i=0;i<N;i++){
+          parts.push({ x: Math.random()*c.width, y: Math.random()*c.height, r: Math.random()*1.8 + 0.4, vx: (Math.random()-.5)*0.25, vy: (Math.random()-.5)*0.25, a: Math.random()*Math.PI*2, s: Math.random()*0.01 + 0.003, col: colors[i%colors.length] });
         }
-      }
-      document.getElementById('btn').addEventListener('click', analyze);
+        function step(){
+          d.clearRect(0,0,c.width,c.height);
+          for(const p of parts){
+            p.a += p.s; p.x += p.vx + Math.cos(p.a)*0.05; p.y += p.vy + Math.sin(p.a)*0.05;
+            if(p.x< -10) p.x=c.width+10; if(p.x>c.width+10) p.x=-10;
+            if(p.y< -10) p.y=c.height+10; if(p.y>c.height+10) p.y=-10;
+            d.beginPath(); d.arc(p.x,p.y,p.r,0,Math.PI*2); d.fillStyle=p.col; d.globalAlpha=0.7; d.fill(); d.globalAlpha=1;
+          }
+          for(let i=0;i<parts.length;i++){
+            for(let j=i+1;j<parts.length;j++){
+              const pi=parts[i], pj=parts[j]; const dx=pi.x-pj.x, dy=pi.y-pj.y, dist=dx*dx+dy*dy;
+              if(dist< 140*140){ const a = 1 - (dist/(140*140)); d.strokeStyle='rgba(193,166,255,'+(0.18*a)+')'; d.lineWidth=1; d.beginPath(); d.moveTo(pi.x,pi.y); d.lineTo(pj.x,pj.y); d.stroke(); }
+            }
+          }
+          requestAnimationFrame(step);
+        }
+        requestAnimationFrame(step);
+      })();
     </script>
   </body>
-  </html>
+</html>
 
 
