--- a/web/app.html
+++ b/web/app.html
@@ -20,8 +20,10 @@
       details{ border:1px dashed var(--border); border-radius:8px; padding:8px; margin-top:8px } textarea{ width:100%; min-height:120px; resize:vertical; background:rgba(0,0,0,.35); color:var(--light); border:1px solid var(--border); border-radius:8px; padding:8px }
       .stats{ display:grid; grid-template-columns: repeat(3,1fr); gap:12px; margin-top:8px } .stat{ background:rgba(255,255,255,.03); border:1px solid var(--border); border-radius:12px; padding:12px; text-align:center } .stat .num{ font-size:26px; font-weight:800 }
       .chips{ display:flex; gap:6px; flex-wrap:wrap; margin-top:6px } .chip{ padding:4px 8px; border-radius:999px; background:rgba(168,85,247,.18); border:1px solid var(--border); font-size:12px }
-      .gallery{ display:grid; grid-template-columns: repeat(auto-fill,minmax(200px,1fr)); gap:10px; margin-top:10px }
-      .thumb{ border:1px dashed var(--border); border-radius:10px; padding:6px; text-align:center; color:var(--muted); background:rgba(255,255,255,.02) }
+      .thumbs{ display:grid; grid-template-columns: repeat(auto-fill,minmax(220px,1fr)); gap:10px; margin-top:10px }
+      .thumb{ border:1px solid var(--border); border-radius:10px; overflow:hidden; background:rgba(255,255,255,.02) }
+      .thumb img{ width:100%; display:block }
+      .thumb figcaption{ padding:6px 8px; font-size:12px; color:var(--muted) }
       .sparkline{ width:100%; height:60px; margin-top:8px }
     </style>
   </head>
@@ -71,42 +73,27 @@
           <details style="margin-top:8px"><summary>Raw JSON</summary><pre id="out">{ "state": "waiting" }</pre></details>
         </div>
         <div class="card">
-          <h3>Rep Gallery</h3>
-          <div id="gallery" class="gallery"><div class="thumb">Waiting for results...</div></div>
+          <h3>Annotated Snapshots</h3>
+          <div id="thumbs" class="thumbs"><div class="thumb"><figcaption style="padding:6px 8px">Awaiting thumbnails…</figcaption></div></div>
         </div>
       </div>
     </div>
     <script>
-      const file=document.getElementById('file'); const drop=document.getElementById('drop'); const btn=document.getElementById('btn'); const retry=document.getElementById('retry'); const cancel=document.getElementById('cancel'); const nameEl=document.getElementById('fileName'); const bar=document.getElementById('bar'); const pill=document.getElementById('statusPill'); const eta=document.getElementById('eta'); const times=document.getElementById('times'); const out=document.getElementById('out'); const logs=document.getElementById('logs'); const link=document.getElementById('reportLink'); const squatsNum=document.getElementById('squatsNum'); const pushupsNum=document.getElementById('pushupsNum'); const goodNum=document.getElementById('goodNum'); const chips=document.getElementById('chips'); const spark=document.getElementById('spark'); const gallery=document.getElementById('gallery');
+      const file=document.getElementById('file'); const drop=document.getElementById('drop'); const btn=document.getElementById('btn'); const retry=document.getElementById('retry'); const cancel=document.getElementById('cancel'); const nameEl=document.getElementById('fileName'); const bar=document.getElementById('bar'); const pill=document.getElementById('statusPill'); const eta=document.getElementById('eta'); const times=document.getElementById('times'); const out=document.getElementById('out'); const logs=document.getElementById('logs'); const link=document.getElementById('reportLink'); const squatsNum=document.getElementById('squatsNum'); const pushupsNum=document.getElementById('pushupsNum'); const goodNum=document.getElementById('goodNum'); const chips=document.getElementById('chips'); const spark=document.getElementById('spark'); const thumbs=document.getElementById('thumbs');
       let visual=0, target=0, startTs=0, upTs=0, fetchTs=0, procTs=0, currentId=null, polling=false, lastFiles=null;
       (function anim(){ if(visual<target){ const d=Math.max(0.003,(target-visual)*0.12); visual=Math.min(target,visual+d); bar.style.width=`${Math.round(visual*100)}%`; } requestAnimationFrame(anim);})();
       function setPill(s){ pill.className='pill'; pill.textContent=s.charAt(0).toUpperCase()+s.slice(1); pill.classList.add(s); }
       function fmtTimes(){ times.textContent = `Uploading: ${Math.round(upTs)}s • Fetching: ${Math.round(fetchTs)}s • Processing: ${Math.round(procTs)}s`; }
-      function log(s){ logs.value += (logs.value?'\n':'') + s; logs.scrollTop = logs.scrollHeight; }
-
-      drop.addEventListener('click', ()=>file.click());
-      drop.addEventListener('dragover',e=>{ e.preventDefault(); drop.style.borderColor='var(--accent)';});
-      drop.addEventListener('dragleave',()=>{ drop.style.borderColor='rgba(168,85,247,0.5)';});
-      drop.addEventListener('drop', e=>{ e.preventDefault(); if(e.dataTransfer.files&&e.dataTransfer.files[0]){ file.files=e.dataTransfer.files; onChange(); }});
-      file.addEventListener('change', onChange);
+      drop.addEventListener('click', ()=>file.click()); drop.addEventListener('dragover',e=>{ e.preventDefault(); drop.style.borderColor='var(--accent)';}); drop.addEventListener('dragleave',()=>{ drop.style.borderColor='rgba(168,85,247,0.5)';}); drop.addEventListener('drop', e=>{ e.preventDefault(); if(e.dataTransfer.files&&e.dataTransfer.files[0]){ file.files=e.dataTransfer.files; onChange(); }}); file.addEventListener('change', onChange);
       function onChange(){ if(file.files.length){ const f=file.files[0]; nameEl.textContent=`${f.name} · ${(f.size/1024/1024).toFixed(2)} MB`; lastFiles=file.files; } }
-
-      btn.addEventListener('click', start);
-      retry.addEventListener('click', ()=>{ if(lastFiles){ file.files=lastFiles; start(); }});
-      cancel.addEventListener('click', ()=>{ polling=false; setPill('error'); });
-
+      btn.addEventListener('click', start); retry.addEventListener('click', ()=>{ if(lastFiles){ file.files=lastFiles; start(); }}); cancel.addEventListener('click', ()=>{ polling=false; setPill('error'); });
+      function reset(){ visual=0; target=0; startTs=0; upTs=0; fetchTs=0; procTs=0; out.textContent='{ "state": "waiting" }'; logs.value=''; link.textContent=''; chips.innerHTML=''; spark.innerHTML=''; thumbs.innerHTML='<div class="thumb"><figcaption style="padding:6px 8px">Awaiting thumbnails…</figcaption></div>'; eta.textContent=''; retry.style.display='none'; cancel.style.display='inline-block'; }
       async function start(){ if(!file.files.length){ alert('Select a file'); return; } reset(); const f=file.files[0]; const form=new FormData(); form.append('file', f, f.name); const xhr=new XMLHttpRequest(); xhr.open('POST','/analyze',true); xhr.responseType='json'; startTs=performance.now()/1000; setPill('uploading'); xhr.upload.onprogress=(e)=>{ if(e.lengthComputable){ target=Math.max(0.05, Math.min(0.7, e.loaded/e.total*0.7)); upTs=(performance.now()/1000)-startTs; fmtTimes(); }}; xhr.onload=()=>{ upTs=Math.max(upTs, (performance.now()/1000)-startTs); fmtTimes(); if(xhr.status!==202){ setPill('error'); out.textContent=JSON.stringify(xhr.response||{},null,2); return; } const resp=xhr.response; currentId=resp.video_id; setPill('fetching'); target=Math.max(target, 0.75); polling=true; poll(); streamLogs(); }; xhr.onerror=()=>{ setPill('error'); }; xhr.send(form); }
-      function reset(){ visual=0; target=0; startTs=0; upTs=0; fetchTs=0; procTs=0; out.textContent='{ "state": "waiting" }'; logs.value=''; link.textContent=''; chips.innerHTML=''; spark.innerHTML=''; gallery.innerHTML='<div class="thumb">Waiting for results...</div>'; eta.textContent=''; retry.style.display='none'; cancel.style.display='inline-block'; }
-
-      async function poll(){ if(!currentId||!polling) return; try{ const r=await fetch(`/status/${currentId}`); const s=await r.json(); out.textContent=JSON.stringify(s,null,2); if(s.status==='processing'){ setPill('processing'); if(typeof s.progress==='number'){ target=Math.max(target, Math.min(0.95, 0.75 + 0.2*s.progress)); procTs = (performance.now()/1000) - startTs - upTs - fetchTs; fmtTimes(); if(s.eta_seconds){ eta.textContent = `ETA ${Math.round(s.eta_seconds)}s`; } } } if(s.status==='done'){ target=1.0; setPill('done'); eta.textContent=''; polling=false; cancel.style.display='none'; retry.style.display='inline-block'; const res=await (await fetch(`/result/${currentId}`)).json(); renderSummary(res); await buildGalleryFrames(res); return; } if(s.status==='error'){ polling=false; setPill('error'); cancel.style.display='none'; retry.style.display='inline-block'; return; } fetchTs = (performance.now()/1000) - startTs - upTs - procTs; fmtTimes(); setTimeout(poll, 900);}catch(e){ setTimeout(poll, 1200);} }
-
+      async function poll(){ if(!currentId||!polling) return; try{ const r=await fetch(`/status/${currentId}`); const s=await r.json(); out.textContent=JSON.stringify(s,null,2); if(s.status==='processing'){ setPill('processing'); if(typeof s.progress==='number'){ target=Math.max(target, Math.min(0.95, 0.75 + 0.2*s.progress)); procTs = (performance.now()/1000) - startTs - upTs - fetchTs; fmtTimes(); if(s.eta_seconds){ eta.textContent = `ETA ${Math.round(s.eta_seconds)}s`; } } } if(s.status==='done'){ target=1.0; setPill('done'); eta.textContent=''; polling=false; cancel.style.display='none'; retry.style.display='inline-block'; const res=await (await fetch(`/result/${currentId}`)).json(); renderSummary(res); renderThumbs(res); return; } if(s.status==='error'){ polling=false; setPill('error'); cancel.style.display='none'; retry.style.display='inline-block'; return; } fetchTs = (performance.now()/1000) - startTs - upTs - procTs; fmtTimes(); setTimeout(poll, 900);}catch(e){ setTimeout(poll, 1200);} }
       async function streamLogs(){ if(!currentId) return; try{ const txt = await (await fetch(`/logs/${currentId}`)).text(); logs.value = txt; logs.scrollTop = logs.scrollHeight; }catch{} if(polling) setTimeout(streamLogs, 1000); }
-
       function renderSummary(res){ const s=res.summary||{}; const sq=s.squats||{total_reps:0,good_form_reps:0,common_issues:[]}; const pu=s.pushups||{total_reps:0,good_form_reps:0,common_issues:[]}; squatsNum.textContent=String(sq.total_reps||0); pushupsNum.textContent=String(pu.total_reps||0); goodNum.textContent=String((sq.good_form_reps||0)+(pu.good_form_reps||0)); const allIssues=[...(sq.common_issues||[]), ...(pu.common_issues||[])]; chips.innerHTML = allIssues.map(x=>`<span class="chip">${x}</span>`).join(''); drawSpark(res); link.innerHTML = res.video_id ? `<a href="/reports/${res.video_id}/summary.json" target="_blank">Open saved summary.json</a>` : ''; }
-
       function drawSpark(res){ const data=(res.frame_data||[]).map(r=>({x:r.frame_index, y:(r.angles && (r.angles.knee||r.angles.elbow))||0})); if(!data.length){ spark.innerHTML=''; return; } const w=600,h=60; const xs=data.map(d=>d.x), ys=data.map(d=>d.y); const minX=Math.min(...xs), maxX=Math.max(...xs); const minY=Math.min(...ys), maxY=Math.max(...ys); const sx=(x)=> (maxX===minX?0:((x-minX)/(maxX-minX))*w); const sy=(y)=> h - (maxY===minY? h/2:((y-minY)/(maxY-minY))*h); const pts=data.map(p=>`${sx(p.x)},${sy(p.y)}`).join(' '); const marks=data.map(p=>`<circle cx="${sx(p.x)}" cy="${sy(p.y)}" r="2.5" fill="#A855F7" />`).join(''); spark.innerHTML = `<polyline fill="none" stroke="#C1A6FF" stroke-width="2" points="${pts}" />${marks}`; }
-
-      async function buildGalleryFrames(res){ const v=res.video_id; const reps=(res.frame_data||[]); if(!v||!reps.length){ gallery.innerHTML='<div class="thumb">No reps detected</div>'; return; } gallery.innerHTML = reps.map(r=>{ const idx=r.frame_index; const src=`/frame/${v}/${idx}?overlay=1`; return `<div class="thumb"><img src="${src}" alt="rep ${r.rep_id}" style="width:100%; border-radius:8px;"/><div style="margin-top:4px; font-size:12px">Rep ${r.rep_id} • ${r.exercise} • ${(r.angles && (r.angles.knee||r.angles.elbow||0)).toFixed(1)}°</div></div>`; }).join(''); }
+      function renderThumbs(res){ const t=res.thumbnails||[]; if(!t.length){ thumbs.innerHTML = '<div class="thumb"><figcaption style="padding:6px 8px">No snapshots available</figcaption></div>'; return; } thumbs.innerHTML = t.map(it=>`<figure class="thumb"><img src="${it.path}" alt="rep ${it.rep_id}"/><figcaption>Rep ${it.rep_id} • ${it.exercise} • ${((it.angles&& (it.angles.knee||it.angles.elbow))||0).toFixed(1)}°</figcaption></figure>`).join(''); }
     </script>
   </body>
 </html>
